[package]
name = "dosint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.5"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
rustyline = "14.0.0"
